--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gr.ntua.cslab</groupId>
 	<artifactId>distributed-esma</artifactId>
-	<version>0.1</version>
+	<version>0.2</version>
 	<name>Distributed ESMA</name>
 	<description>Distributed ESMA</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -21,6 +21,14 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<finalName>${project.artifactId}</finalName>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	<dependencies>
