added hama dependency to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,15 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hama</groupId>
+			<artifactId>hama-core</artifactId>
+			<version>0.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hama</groupId>
+			<artifactId>hama-yarn</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 	</dependencies>
 </project>
